# rezepte.vogt4nick.com

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml  maintenance.yml  update-dependencies.yml
rezepte/: index.md
rezepte/rezepte/: index.md  pages.yml
rezepte/rezepte/knödel/: kaspressknödel.md  semmelknödel.md
rezepte/rezepte/salate/bohnensalate/: bohnensalat.md  cowboy-kaviar.md
rezepte/rezepte/suppen/: karrotensuppe.md
src/: index.md
src/assets/stylesheets/: extra.css
src/rezepte/: index.md
src/rezepte/beilagen/: petersilerdäpfel.md
src/rezepte/fleisch/: mühlviertler-raucheintopf.md  saftfleisch.md  wiener-schnitzel.md
src/rezepte/knödel/: erdäpfelknödel.md  kaspressknödel.md  semmelknödel.md
src/rezepte/salate/: gemischter-salat.md  gemischtersalat.md  gurkensalat.md  pages.yml
src/rezepte/soßen/: kräuterdip.md
src/rezepte/suppen/: karrotensuppe.md  kürbissuppe.md
src/rezepte/süßspeisen/: kaiserschmarren.md  linzer-torte.md  vanillekipferl.md
