[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
name = "rezepte.vogt4nick.com"
authors = ["Nick Vogt <vogt4nick@gmail.com"]
description = "Dem Nick seine Rezepte."
readme = "README.md"
repository = "https://github.com/vogt4nick/rezepte.vogt4nick.com"
version = "0.0.0"

[tool.poetry.dependencies]
python = "~3.8"
mkdocs = "^1.1.2"
mkdocs-awesome-pages-plugin = "^2.4.0"
mkdocs-material = "^6.1.6"
mkdocs-macros-plugin = "^0.5.0"

[tool.poetry.dev-dependencies]
commitizen = "^2.20"
pre-commit = "^2.15"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$major.$minor.$patch$prerelease"
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
